css alignment of solver page

--- a/src/Solver/Solver.css
+++ b/src/Solver/Solver.css
@@ -86,6 +86,7 @@
 
   .solverTop, .solverBottom {
     flex-direction: row;
+    align-items: flex-start;
   }
 
   .solverIpt {
